--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-opencv-python-headless
-numpy
-pillow
-matplotlib
-scikit-learn
-torch
-torchvision
+matplotlib==3.10.1
+numpy==2.2.4
+opencv-python==4.11.0.86
+pillow==11.1.0
+psycopg2-binary==2.9.10
+scikit-image==0.25.2
+scipy==1.15.2
+streamlit==1.44.1
